fixed z-index issue

--- a/ren.css
+++ b/ren.css
@@ -97,7 +97,7 @@ body {
   font-size: 1.4rem;
 
   cursor: pointer;
-  z-index: 2000;
+  z-index: 20000;
 
   display: flex;
   align-items: center;
